# cumolon-comparison

./: .gitignore  README.md  main.py  pyproject.toml
report/: duplicated.md  duplicated.txt  fully_unique.txt  low_tolerance.txt  partially_duplicated.md  partially_duplicated.txt  partially_duplicated_detailed.md  partially_duplicated_detailed.txt  unique.md  unique.txt
resources/asia/ui/public/: index.html
resources/asia/ui/src/views/Layout/: index.vue
resources/asia/ui/src/views/collatorDetail/: index.vue
resources/asia/ui/src/views/delegatorDetail/: index.vue
resources/asia/ui/src/views/leaderBoard/: index.vue
resources/asia/ui/src/views/myStake/: index.vue
resources/asia/ui/src/views/myStake/StakingCollators/: index.vue
resources/asia/ui/src/views/myStake/Timemachine/: index.vue
src/: comparator.py  plot.py  repo_comparison.py
