[tool.poetry]
name = "cumolom-comparison"
version = "0.1.0"
description = ""
authors = ["sergeyg <sergey.gerodes@raysono.com>"]
readme = "README.md"
packages = [{include = "cumolom_comparison"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
